<resources>
    <string name="app_name">EthereumWallet</string>

    <string name="back_button_reminder">再按一次退出应用</string>

    <string name="approx_equal">≈</string>

    <string name="cny_sign">¥</string>

    <string name="total_asset">总资产（¥）</string>

    <string name="create_new_wallet">创建钱包</string>

    <string name="scanQR">扫一扫</string>

    <string name="asset">资产</string>

    <string name="price">行情</string>

    <string name="me">我</string>

    <string name="eth">ETH</string>

    <string name="selfcoin">BLOC</string>

    <string name="password_inconsistent">密码不一致，请重新输入</string>

    <string name="empty_password">密码不可为空</string>

    <string name="wallet_name_too_long">钱包名字应为1~12位</string>

    <string name="wallet_name_existed">钱包名字已存在</string>

    <string name="wallet_name">钱包名称</string>

    <string name="password">密码</string>

    <string name="repeat_password">重复密码</string>

    <string name="import_wallet">导入钱包</string>

    <string name="private_key">秘钥</string>

    <string name="wallet_existed">钱包已存在</string>

    <string name="wallet_needed">请创建钱包以继续</string>

    <string name="usd">美元（$）</string>

    <string name="cny">人民币（￥）</string>

    <string name="asset_name">资产名称</string>

    <string name="receive_payment">收款</string>

    <string name="make_payment">转账</string>

    <string name="make_ETH_payment">ETH转账</string>

    <string name="make_BLOC_payment">BLOC转账</string>

    <string name="receiver_wallet_address">收款人钱包地址</string>

    <string name="make_payment_amount">转账金额</string>

    <string name="gas_price">Gas Price</string>

    <string name="gas_limit">Gas Limit</string>

    <string name="next_step">下一步</string>

    <string name="get_latest_gas_price">获取最新</string>

    <string name="gas_price_safe_low">最低费用(&lt;30min)</string>

    <string name="gas_price_standard">平均费用(&lt;5min)</string>

    <string name="gas_price_fastest">最快费用(&lt;2min)</string>

    <string name="transaction_request_success">转账申请已提交</string>

    <string name="wrong_password">密码错误</string>

    <string name="receiver_cannot_be_self">收款人地址不能是自己</string>

    <string name="address_incorrect_format">地址格式错误，应为0x开头的42位地址</string>

    <string name="empty_field_exists">有空没填</string>

    <string name="only_dot_invalid_input">.不是有效输入</string>

    <string name="insufficient_fund">余额不足</string>

    <string name="account_balance">余额</string>

    <string name="payment_detail">支付详情</string>

    <string name="to_address">转入地址</string>

    <string name="from_address">付款钱包</string>

    <string name="miner_fee">矿工费用</string>

    <string name="transaction_type">交易类型</string>

    <string name="unknown_error">未知错误</string>

    <string name="transaction_in_progress">交易中，请耐心等待</string>

    <string name="camera_permission_required">需要相机权限以继续</string>

    <string name="exchange_refresh_failed">汇率更新失败</string>

    <string name="balance_refresh_failed">账户更新失败</string>

    <string name="address_qr_code">收款码</string>

    <string name="copy_address">复制收款地址</string>

    <string name="generate_qr_failed">生成二维码失败</string>

    <string name="copied">已复制</string>

    <string name="manage_wallet">管理钱包</string>

    <string name="transaction_history">交易历史</string>

    <string name="plus">+</string>

    <string name="minus">-</string>

    <string name="no_more_transact_hist">没有更多的历史记录了</string>

    <string name="transact_hist_refreshed">已更新交易历史记录</string>

    <string name="loading">正在加载&#8230;</string>

    <string name="transaction_record">交集记录</string>

    <string name="sender">发款方</string>

    <string name="receiver">收款方</string>

    <string name="transaction_id">交易号</string>
    
    <string name="block_number">区块编号</string>

    <string name="transaction_time">交易时间</string>
</resources>
