<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="#fff">

        <ImageView
            android:id="@+id/toolbar_return"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/ic_back"
            android:contentDescription="toolbar return button"/>

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/make_payment_scanQR"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/ic_asset_scan"
            android:contentDescription="toolbar scan button"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#d4d4d4" />

    </RelativeLayout>

    <EditText
        android:id="@+id/make_payment_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/receiver_wallet_address"
        android:inputType="text"
        android:maxLines="1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <EditText
            android:id="@+id/make_payment_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:hint="@string/make_payment_amount"
            android:inputType="numberDecimal"
            android:maxLines="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10sp"
            android:layout_toLeftOf="@id/make_payment_sender_balance"
            android:text="@string/account_balance"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/make_payment_sender_balance"
            android:text=": "
            android:textSize="18sp" />

        <TextView
            android:id="@+id/make_payment_sender_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="18sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/make_payment_gas_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/make_payment_refresh_gas_price"
            android:hint="@string/gas_price"
            android:inputType="numberDecimal"
            android:maxLines="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/make_payment_refresh_gas_price"
            android:text="Gwei"
            android:textSize="18sp" />

        <Button
            android:id="@+id/make_payment_refresh_gas_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="10dip"
            android:padding="7dp"
            android:text="@string/get_latest_gas_price"
            android:textColor="#fff"
            android:textSize="15sp" />

    </RelativeLayout>


    <EditText
        android:id="@+id/make_payment_gas_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/gas_limit"
        android:inputType="number"
        android:maxLines="1" />

    <Button
        android:id="@+id/make_payment_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/colorPrimary"
        android:padding="5dp"
        android:text="@string/next_step"
        android:textColor="#fff"
        android:textSize="18sp" />

    <TableLayout
        android:id="@+id/make_payment_gas_price_table"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/gas_price_safe_low"
                android:textColor="#1ABB9C"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/gas_price_standard"
                android:textColor="#03586A"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/gas_price_fastest"
                android:textColor="#F00"
                android:textSize="12sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/make_payment_low_gas_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="1.5 Gwei"
                android:textColor="#1ABB9C"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/make_payment_medium_gas_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="1.5 Gwei"
                android:textColor="#03586A"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/make_payment_high_gas_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="1.5 Gwei"
                android:textColor="#F00"
                android:textSize="15sp" />
        </TableRow>
    </TableLayout>

    <ProgressBar
        android:id="@+id/make_payment_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:visibility="gone" />

</LinearLayout>