<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#263238"
    tools:context=".PriceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/price"
                android:textColor="#fff"
                android:textSize="20sp" />
        </RelativeLayout>

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/price_swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="left"
                        android:text="@string/asset_name"
                        android:textColor="#acacac"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="left"
                        android:text="@string/cny"
                        android:textColor="#acacac"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="left"
                        android:text="@string/usd"
                        android:textColor="#acacac"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="涨跌($)"
                        android:textColor="#acacac"
                        android:textSize="15sp" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="15dp"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="left"
                        android:text="@string/eth"
                        android:textColor="#fff"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/price_eth_cny"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="left"
                        android:textColor="#fff"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/price_eth_usd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="left"
                        android:textColor="#fff"
                        android:textSize="22sp" />

                    <ImageView
                        android:id="@+id/price_eth_status_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="15dp"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="left"
                        android:text="@string/selfcoin"
                        android:textColor="#fff"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="left"
                        android:text="0.05"
                        android:textColor="#fff"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="left"
                        android:text="0.008"
                        android:textColor="#fff"
                        android:textSize="22sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/ic_equal" />
                </TableRow>
            </TableLayout>

        </android.support.v4.widget.SwipeRefreshLayout>
    </LinearLayout>

</FrameLayout>