<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.TransactHistDetailActivity"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_marginTop="25dp"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <ImageView
            android:id="@+id/toolbar_return"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/ic_back"
            android:tint="#fff"
            android:contentDescription="toolbar return button"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:text="@string/transaction_record"/>

    </RelativeLayout>



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="145dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="#fff">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/transact_hist_detail_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="30sp"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/transact_hist_detail_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/transact_hist_detail_amount"
                android:layout_alignBottom="@id/transact_hist_detail_amount"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d4d4d4"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/sender"/>

                    <ImageView
                        android:id="@+id/transact_hist_detail_sender_self"
                        android:layout_marginLeft="10dp"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_me"
                        android:tint="@color/colorPrimary"
                        android:visibility="invisible"/>
                </LinearLayout>
                
                <TextView
                    android:id="@+id/transact_hist_detail_sender"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/receiver"/>

                    <ImageView
                        android:id="@+id/transact_hist_detail_receiver_self"
                        android:layout_marginLeft="10dp"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_me"
                        android:tint="@color/colorPrimary"
                        android:visibility="invisible"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/transact_hist_detail_receiver"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginTop="15dp"
                    android:text="@string/miner_fee"/>

                <TextView
                    android:id="@+id/transact_hist_detail_minerFee"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"/>

                <View
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#d4d4d4"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginTop="15dp"
                    android:text="@string/transaction_id"/>

                <TextView
                    android:id="@+id/transact_hist_detail_transactionID"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginTop="15dp"
                    android:text="@string/block_number"/>

                <TextView
                    android:id="@+id/transact_hist_detail_blockNum"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginTop="15dp"
                    android:text="@string/transaction_time"/>

                <TextView
                    android:id="@+id/transact_hist_detail_transaction_time"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"/>

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/transact_hist_detail_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="115dp"/>

</RelativeLayout>