<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MeFragment"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:padding="5dp"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="#fff"
            android:text="@string/me"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/me_manage_wallet"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:background="?android:attr/selectableItemBackground"
                android:focusable="true"
                android:clickable="true">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="fitCenter"
                    android:tint="#fff"
                    android:src="@drawable/ic_asset_create_wallet"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="18sp"
                    android:textColor="#fff"
                    android:text="@string/manage_wallet"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/me_transaction_history"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:background="?android:attr/selectableItemBackground"
                android:focusable="true"
                android:clickable="true">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="fitCenter"
                    android:tint="#fff"
                    android:src="@drawable/ic_transaction_history"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="18sp"
                    android:textColor="#fff"
                    android:text="@string/transaction_history"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">

    </LinearLayout>

</LinearLayout>